policy popup alignment fixed

--- a/front-end/src/app/view-modules/common/timesheet-view/timesheet-view.component.scss
+++ b/front-end/src/app/view-modules/common/timesheet-view/timesheet-view.component.scss
@@ -105,3 +105,6 @@
     }
   }
 }
+.select{
+ background-color: red;
+}
